css/style.css
body {padding:0px; padding-top:20px; background:black;}
.container {width:320px; background:black;}
.container h1 {margin-bottom:30px; padding-left:11px;}
.container h1 a {color:black;}

#thumbs {padding-top:30px; background: white;}
#thumbs h2 {margin:auto; padding-bottom:40px; text-align:center;}
#thumbs img {width:159px;}
#thumbs a {float:left; padding-top:2px; background: white;}
#thumbs a:nth-child(even) {padding-right:2px;}

/*.single-sculpture img {width:100%;}*/

#map {width:320px; height:320px; margin:auto;}
#the-map {background:white;}

